--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "csv-parse": "^5.5.6",
     "fs": "^0.0.1-security",
     "joi": "^17.13.3",
+    "nest-typed-config": "^2.9.3",
     "nestjs-i18n": "^10.4.5",
     "nestjs-telegraf": "^2.8.1",
     "reflect-metadata": "^0.2.0",
