feat: adds prisma

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,16 @@
 ###### generic
 !.idea/codeStyles
 !.idea/runConfigurations
+!migrations/*.sql
 *$py.class
 **/*.ignore
 **/*.playground
 **/*.rs.bk
 *.cover
+*.db
+*.db-journal
+*.db3
+*.db3-journal
 *.egg
 *.egg-info/
 *.env
@@ -29,6 +34,10 @@
 *.seed
 *.so
 *.spec
+*.sqlite
+*.sqlite-journal
+*.sqlite3
+*.sqlite3-journal
 *.tgz
 *.tsbuildinfo
 .AppleDB
@@ -162,7 +171,7 @@ dmypy.json
 docs/_build/
 downloads/
 eggs/
-env.*# Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all
+env.*
 env.bak/
 env/
 fabric.properties
