--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --config jest.config.js",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config test/jest-e2e.json",
-    "seed": "yarn ts-node _arhive/seed.ts",
-    "seed2": "yarn ts-node src/seed/seed2.ts",
-    "prisma:migrate": "npx prisma migrate dev --name init",
-    "prisma:generate": "npx prisma generate",
-    "prisma:regenerate": "rm -f ./prisma/dev.sqlite && rm -f ./prisma/dev.sqlite-journal && rm -rf ./prisma/migrations/ && npx prisma migrate dev --name init && npx prisma generate"
+
+    "prisma:migrate:postres": "npx prisma migrate dev --name init",
+    "prisma:generate:postres": "npx prisma generate --schema=prisma/schema.postgresql.prisma",
+    "prisma:create:schemas": "ts-node prisma/createSchemas.ts",
+    "prisma:regenerate:sqlite": "npm run prisma:create:schemas && rm -f ./prisma/dev.sqlite && rm -f ./prisma/dev.sqlite-journal && npx prisma db push --schema=prisma/schema.sqlite.prisma && npx prisma generate --schema=prisma/schema.sqlite.prisma"
   },
   "engines": {
     "node": ">=20.10.0",
