--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "template",
   "version": "0.0.1",
   "description": "",
-  "author": "Sergey Gerodes",
+  "author": "Sergey Gerodes <gerodes.it@gmail.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
