--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
+    "format": "prettier --write src/**/*.ts test/**/*.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
