--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --config jest.config.js",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config test/jest-e2e.json",
-
     "prisma:migrate:postres": "npx prisma migrate dev --schema=prisma/schema.postgresql.prisma --name init",
     "prisma:generate:postres": "npx prisma generate --schema=prisma/schema.postgresql.prisma",
     "prisma:create:schemas": "ts-node prisma/createSchemas.ts",
@@ -50,6 +48,7 @@
     "world_countries_lists": "^2.9.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
