--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
-    "format": "prettier --write src/**/*.ts test/**/*.ts configuration/**/*.ts",
-    "lint": "eslint \"{src,apps,libs,test, configuration}/**/*.ts\" --fix",
+    "format": "prettier --write src/**/*.ts test/**/*.ts configuration/**/*.ts prisma/**/*.ts",
+    "lint": "eslint \"{src,apps,libs,test, configuration, prisma}/**/*.ts\" --fix",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
