--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config test/jest-e2e.json",
+    "generate:i18n": "node configuration/i18n/generate-i18n-keys.ts",
     "prisma:migrate:postres": "npx prisma migrate dev --schema=prisma/schema.postgresql.prisma --name init",
     "prisma:generate:postres": "npx prisma generate --schema=prisma/schema.postgresql.prisma",
     "prisma:create:schemas": "ts-node prisma/createSchemas.ts",
