feat: adds i18n type safety

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "@telegram/*": ["src/telegram/*"],
       "@configuration/*": ["configuration/*"],
+      "@i18n/*": ["configuration/i18n/*"],
       "@database/*": ["src/database/*"],
       "@language/*": ["src/language/*"]
     },
