--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fs": "0.0.1-security",
-    "joi": "^17.13.3",
     "nest-typed-config": "^2.9.3",
     "nestjs-i18n": "^10.5.0",
     "nestjs-telegraf": "^2.8.1",
+    "nestjs-telegraf-i18n": "^0.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3"
