feat: add author

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "template",
   "version": "0.0.1",
   "description": "",
-  "author": "Sergey Gerodes <gerodes.it@gmail.com>",
+  "author": "Sergey Gerodes <gerodes.it@gmail.com> (https://sergeygerodes.xyz/)",
   "private": true,
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
