--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "nestjs-telegraf-i18n": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "typescript-cacheable": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
