--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
     "@prisma/client": "^6.4.1",
+    "@tonconnect/sdk": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fs": "0.0.1-security",
@@ -45,6 +46,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "telegraf": "^4.16.3",
+    "ton": "^13.9.0",
     "typescript-cacheable": "^3.0.3"
   },
   "devDependencies": {
