--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
+    "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.4.1",
     "@tonconnect/sdk": "^3.1.0",
     "class-transformer": "^0.5.1",
