--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tonconnect/sdk": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
     "fs": "0.0.1-security",
     "nest-typed-config": "^2.9.4",
     "nestjs-i18n": "^10.5.1",
