--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "pnpm": ">=9.5.0"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.17",
     "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.8.2",
     "@tonconnect/sdk": "^3.1.0",
+    "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cron": "^4.3.0",
