--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rxjs": "^7.8.2",
     "telegraf": "^4.16.3",
     "ton": "^13.9.0",
+    "ton-core": "^0.53.0",
     "typescript-cacheable": "^3.0.3"
   },
   "devDependencies": {
