--- a/package.json
+++ b/package.json
@@ -33,15 +33,20 @@
     "pnpm": ">=9.5.0"
   },
   "dependencies": {
+    "@libsql/client": "^0.17.0",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.17",
     "@nestjs/platform-express": "^10.4.17",
     "@nestjs/schedule": "^6.0.0",
+    "@prisma/adapter-better-sqlite3": "^7.3.0",
+    "@prisma/adapter-libsql": "^7.3.0",
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@tonconnect/sdk": "^3.1.0",
     "axios": "^1.13.2",
+    "better-sqlite3": "^12.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cron": "^4.3.0",
@@ -51,6 +56,7 @@
     "nestjs-i18n": "^10.5.1",
     "nestjs-telegraf": "^2.9.1",
     "nestjs-telegraf-i18n": "^1.2.7",
+    "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "telegraf": "^4.16.3",
@@ -64,8 +70,10 @@
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.17",
     "@telegraf/types": "^7.1.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.21",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
